* 2012-09-10 - marcus.klein@open-xchange.com

 - Fix for bug 22949: Missed to start OSGi service trackers for DatabaseService.
 - Fix for bug 22961: Added conflict to old open-xchange-commons-logging-log4j package.
 - Fix for bug 22869: Iterating now all bundles in system excluding bundle fragments and checking if bundles are in active state.

* 2012-09-07 - thorben.betten@open-xchange.com

 - Fix for bug 22943: Limit max. size of parseable HTML content; configurable through 'com.openexchange.html.maxLength'

* 2012-09-07 - marcus.klein@open-xchange.com

 - Fix for bug 22937: Preventing NullPointerExceptions in SOAP administrator reseller service if optional restrictions are not sent.
 - Fix for bug 22933: Pushing the DatabaseService into AdminCache instances of administration autocontextid bundle.
 - Fix for bug 22669: Not using any reflection mechanisms anymore to instantiate OXToolStorageInterface to prevent NullPointerException.

* 2012-09-06 - marcus.klein@open-xchange.com

 - Fix for bug 22872: Publishing directly the object of a RMI Remote interface instead of its stub makes the objects not disappear anymore.

* 2012-09-05 - marcus.klein@open-xchange.com

 - Fix for bug 22915: No NPE if SOAP method is not found.

* 2012-09-05 - thorben.betten@open-xchange.com

 - Fix for bug 22897: Make generated session instance available, rather than only providing its identifier
 - Fix for bug 22918: Deal with possible absent ThreadState instance
 - Fix for bug 22921: Added null guard to prevent NPE
 - Fix for bug 22920: Added null guard to prevent NPE
 - Fix for bug 22891: Added null guard
 - Fix for bug 22890: Added null guard
 - Fix for bug 22883: Added missing reseller interfaces
 - Fix for bug 22928: Fixed activator of bundle 'com.openexchange.user.copy'
 - Fix for bug 22870: Checking for possibly empty mail identifier on action=get_structure request
 - Fix for bug 22927: Fixed CleanUpActivator of bundle 'com.openexchange.subscribe'